--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-            <h4>Hashmi Travel & Tourisms </h4>
+            <h4>Hashmi Travel & Tourisms <sub >Beta</sub> </h4>
             <ul id="menu_bx">
                 <li><a href="https://www.facebook.com/profile.php?id=61550125834666&mibextid=ZbWKwL">Discover</a></li>
             
